<resources>
    <string name="app_name">GPTM</string>

    <string name="Eagle">Eagle</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Home">Home</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Play">Play</string>
    <string name="Next">Next</string>
    <string name="Score_Card">Score Card</string>
    <string name="View_Golf_Course">View Golf Course</string>

    <string name="LOGIN_STATUS">Login_Status</string>
    <string name="LOCATION_PERMISSION">Location_Permission</string>

    <string name="Username_s">Username*</string>
    <string name="Password_s">Password*</string>
    <string name="Verify_Password_s">Verify Password*</string>
    <string name="Name_s">Name*</string>
    <string name="First_Name_s">First Name*</string>
    <string name="Last_Name_s">Last Name*</string>
    <string name="Location_s">Location*</string>
    <string name="Email_s">Email*</string>
    <string name="Phone_Number_s">Phone Number*</string>

    <string name="Try_Again">Try Again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>

    <string name="Select_the_number_of_players_c">Select the number of players:</string>
    <string name="Select_the_closest_golf_course_c">Select the closest golf course:</string>
    <string name="Select_Flag_Color_c">Select Flag Color:</string>

    <string name="fa_flag">&#xf024;</string>

</resources>
