<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:paddingBottom="30dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_layout"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:id="@+id/email"
                android:hint="@string/Email_s"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_layout"
            android:layout_below="@+id/email_layout"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:id="@+id/password"
                android:hint="@string/Password_s"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_password_layout"
            android:layout_below="@+id/password_layout"
            android:layout_marginTop="30dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:id="@+id/verify_password"
                android:hint="@string/Verify_Password_s"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_button"
            android:text="@string/SignUp"
            android:layout_below="@+id/verify_password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

</ScrollView>