<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:clickable="true"
    android:focusable="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userName_layout"
                android:layout_margin="45dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:id="@+id/userName"
                    android:hint="@string/Email"
                    android:layout_centerHorizontal="true"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_layout"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"
                android:layout_below="@+id/userName_layout"
                >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/Password"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                android:layout_below="@+id/password_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="100dp"
                android:text="@string/Login"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColor="@android:color/white"
                />
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetPwd"
                android:layout_below="@+id/login_button"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/Reset_Password"
                />
-->
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>